fix table header appearance in dark mode (#3966)

--- a/website/src/css/customTheme.scss
+++ b/website/src/css/customTheme.scss
@@ -225,7 +225,6 @@ hr {
     }
 
     tr th {
-      background-color: var(--divider) !important;
       text-transform: uppercase;
       padding: 6px 10px;
       font-size: 0.7rem;
@@ -370,10 +369,6 @@ html[data-theme="dark"] {
       a code {
         background-color: transparent;
       }
-    }
-
-    table thead tr {
-      background-color: var(--ifm-menu-color-background-active);
     }
 
     .prism-code {
